2009-01-21  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Libraries/Hyena/Hyena/StringUtil.cs: Make a regex a static field,
	for a small performance improvement (BGO #560234).

2009-01-21  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* docs/monodoc.mk: Fix parallel build for docs (BGO #559917).

2009-01-21  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* build/icon-theme-installer: Also update the icon cache during 
	"make uninstall" (BGO #561461).

2009-01-21  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* build/m4/shamrock/programs.m4: Properly detect when a program is not
	found (BGO #562185).

2009-01-20  Aaron Bockover  <abock@gnome.org>

	Banshee 1.4.2 Released

2009-01-20  Aaron Bockover  <abock@gnome.org>

	* configure.ac: Bump to 1.4.2, set vendor to svn or tarball automatically

	* NEWS: Updated

2009-01-20  Aaron Bockover  <abock@gnome.org>

	* src/AssemblyInfo.cs.in:
	* src/Core/Banshee.ThickClient/Banshee.Gui.Dialogs/AboutDialog.cs:
	Updated Copyright strings for 2009

2009-01-17  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellTrackNumber.cs:
	Patch from Christoph Burgdorf to right align this (BGO #553322)

	* src/Core/Banshee.ThickClient/Banshee.Collection.Gui/ColumnCellPositiveInt.cs:
	Apply the same fix for all int-based columns (bpm, play/skip count, etc)

2009-01-13  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui.TrackEditor/RangeEntry.cs:
	Allow setting the track/disc number/counts to > 99 (up to 999 now).

2009-01-13  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Collection.Indexer/CollectionIndexerService.cs:
	Fix bug in logic of whether to raise a collection changed event.  We
	should have been ignoring all changes unless to a field other than
	LastPlayed/Skipped or Play/SkipCount but weren't (BGO #567552)
